force-app/main/default/objects/VocalEventsSettings__c/VocalEventsSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Contains constants for Vocal Events</description>
    <label>Vocal Events Settings</label>
</CustomObject>