force-app/main/default/objects/VocalEventsSettings__c/fields/Commission__c.field-meta.xml
<CustomField>
    <fullName>Commission__c</fullName>
    <defaultValue>15</defaultValue>
    <description>The Amount of commission paid to Vocal Events</description>
    <label>Commission</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>