force-app/main/default/objects/VocalEventsSettings__c/fields/Integration_Alerts_Email__c.field-meta.xml
<CustomField>
    <fullName>Integration_Alerts_Email__c</fullName>
    <description
  >Where to send alerts when an external integration (e.g. Google Calendar sync) fails. Left blank in source — set the live value via Setup after deploy.</description>
    <label>Integration Alerts Email</label>
    <type>Email</type>
</CustomField>