force-app/main/default/objects/VocalEventsSettings__c/fields/Travel_Fee_Per_Km__c.field-meta.xml
<CustomField>
    <fullName>Travel_Fee_Per_Km__c</fullName>
    <defaultValue>6</defaultValue>
    <description>The current travel fee per km</description>
    <label>Travel Fee (Per Km)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>