force-app/main/default/objects/VocalEventsSettings__c/fields/VAT__c.field-meta.xml
<CustomField>
    <fullName>VAT__c</fullName>
    <description>The Value Added Tax Percentage before May 2025</description>
    <label>VAT (Pre May 2025)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>