force-app/main/default/objects/VocalEventsSettings__c/fields/VAT_Post_May_2025__c.field-meta.xml
<CustomField>
    <fullName>VAT_Post_May_2025__c</fullName>
    <description>The VAT Percentage as of May 2025</description>
    <label>VAT (Post May 2025)</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>